--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-OPENAI_KEY = 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
-MONGO_URI = mongodb+srv://yang:admin@clusterforchatgpt.zlpz5e4.mongodb.net/chatGPT?retryWrites=true&w=majority
-TELEGRAM_KEY = 6269703417:AAE5lklbLtdaw8Ul4gze9HtAkvrurMrHvoQ
+OPENAI_KEY = <your-api>
+MONGO_URI = <your-api>
+TELEGRAM_KEY = <your-api>
+ 
